fix sign up checkbox alignment

--- a/src/components/SignInForm/index.scss
+++ b/src/components/SignInForm/index.scss
@@ -49,6 +49,11 @@
     margin-top: 1rem;
   }
 
+  .rememberMe {
+    display: flex;
+    flex-direction: row;
+  }
+
   /* checkbox custom Style */
   input[type="checkbox"] {
     width: 1rem;
@@ -59,7 +64,8 @@
     appearance: none;
     outline: 0;
     cursor: pointer;
-    margin-right: 1rem;
+    margin-right: 0.5rem;
+    // margin-top: 0.7rem;
     transition: background 175ms cubic-bezier(0.1, 0.1, 0.25, 1);
 
     &::before {
@@ -67,7 +73,7 @@
       content: "";
       display: block;
       top: 2px;
-      left: 7px;
+      left: 5px;
       width: 8px;
       height: 14px;
       border-style: solid;
